--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>net.intelie.tinymap</groupId>
     <artifactId>tinymap</artifactId>
-    <version>0.7-SNAPSHOT</version>
+    <version>0.7</version>
 
     <name>TinyMap</name>
     <description>Memory-Efficient Immutable HashMaps</description>
