--- a/pom.xml
+++ b/pom.xml
@@ -200,7 +200,7 @@
                         <artifactId>maven-javadoc-plugin</artifactId>
                         <version>3.3.1</version>
                         <configuration>
-                            <additionalparam>-Xdoclint:none</additionalparam>
+                            <doclint>none</doclint>
                         </configuration>
                         <executions>
                             <execution>
